--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,6 +15,7 @@ header {
     @media @mobile {
       width: 100%;
       text-align: center;
+      padding-bottom: 10px;
     }
   }
 
